developed landing page with form and block calendar

--- a/src/assets/utils_scss/vars.scss
+++ b/src/assets/utils_scss/vars.scss
@@ -1,9 +1,9 @@
 // Font
-$mainFont                : 'Montserrat', Helvetica, Arial, sans-serif;
+$mainFont                : 'Montserrat', sans-serif;
+$quicksandFont           : 'Quicksand', sans-serif;
 
 // Size
-$mainFontColor           :#1F2041;
-$mainFontSize            : 18px;
+$mainFontSize            : 14px;
 $mainFontWeight          : 400;
 $mainLineHeight          : 1.4;
 
@@ -14,8 +14,11 @@ $phoneWidth              : 480px;
 $smPhoneWidth            : 320px;
 
 // Main color
+$main-color              : #1F2041;
+$text-color              : rgba(31, 32, 65, 0.75);
 $default-color           : #ffffff;
 $link-color              : rgba(31, 32, 65, 0.5);
 $button-entry-color      : #BC9CFF;
+
 
 
