--- a/src/assets/utils_scss/fonts.scss
+++ b/src/assets/utils_scss/fonts.scss
@@ -1,2 +1,11 @@
 // Fonts here
 // see more: https://github.com/vedees/webpack-template/blob/master/README.md#import-js-files
+
+// @font-face {
+//     font-family: "Montserrat";
+//     src: url('/src/assets/fonts/Montserrat_Regular/Montserrat-Regular.eot'); /* IE9 Compat Modes */
+//     src: url('/src/assets/fonts/Montserrat_Regular/Montserrat-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//          url('/src/assets/fonts/Montserrat_Regular/Montserrat-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+//          url('/src/assets/fonts/Montserrat_Regular/Montserrat-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+//          url('/src/assets/fonts/Montserrat_Regular/Montserrat-Regular.svg') format('svg'); /* Legacy iOS */
+//   }
