--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -2,16 +2,14 @@ header
   .container
     .header-wraper
       .logo
-        img(src="assets/img/logo/logo.png", alt="TOXIN")
+        a(href="#"): img(src="assets/img/logo/logo.png", alt="TOXIN")
       nav
         ul.header-menu
-          li: a(href="#" class="header-menu__link") О нас
-          li: a(href="#" class="header-menu__link") Услуги
-                img(src="assets/img/items/arrow_more.jpg", alt="")
-          li: a(href="#" class="header-menu__link") Вакансии
-          li: a(href="#" class="header-menu__link") Новости
-          li: a(href="#" class="header-menu__link") Соглашения
-                img(src="assets/img/items/arrow_more.jpg", alt="")
+          li: a(href="#" class="header-menu__link menu__link") О нас 
+          li: a(href="#" class="header-menu__link menu__link") Услуги <i class="fa fa-angle-down" aria-hidden="true"></i>
+          li: a(href="#" class="header-menu__link menu__link") Вакансии
+          li: a(href="#" class="header-menu__link menu__link") Новости
+          li: a(href="#" class="header-menu__link menu__link") Соглашения <i class="fa fa-angle-down" aria-hidden="true"></i>
           li: a(href="#" class="button") войти
           li: a(href="#" class="button-signUp") зарегистрироваться
            
