--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -17,11 +17,15 @@ header{
         }
         .header-menu__link{
             display: inline-block;
-            padding-top: 3px;
+            padding-top: 10px;
             transition: all .2s;
             &:hover{
                 color: $button-entry-color;
                 border-bottom: 2px solid $button-entry-color;
+            }
+            .fa-angle-down{
+                font-size: 15px;
+                font-weight: bold;
             }
         }
         img{
