--- a/src/bundles/bundle.scss
+++ b/src/bundles/bundle.scss
@@ -1,3 +1,4 @@
 @import "../blocks/header/header.scss";
 @import "../blocks/content/content.scss";
+@import "../blocks/content/calendar/calendar.scss";
 @import "../blocks/footer/footer.scss";
