--- a/src/main.pug
+++ b/src/main.pug
@@ -8,7 +8,8 @@ html(lang='en')
     title #{title}
     meta(name="description", content=description)
     block head
-      
+      link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
+      link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Quicksand:400,700&display=swap")
 
   body(class=pageClass)
     include ./bundles/bundle
