--- a/src/main.scss
+++ b/src/main.scss
@@ -4,21 +4,7 @@
 @import "assets/utils_scss/fonts";
 @import "assets/utils_scss/reset";
 
-html {
-  line-height: $mainLineHeight;
-  font-size: $mainFontSize;
-  color: $mainFontColor;
-  height: 100%;
-  @media screen and (max-width: $desktopWidth) {
-    font-size: 16px;
-  }
-  @media screen and (max-width: $tableWidth) {
-    font-size: 15px;
-  }
-  @media screen and (max-width: $phoneWidth) {
-    font-size: 14px;
-  }
-}
+
 
 body {
   margin: 0;
@@ -26,6 +12,7 @@ body {
   font-family: $mainFont;
   font-size: $mainFontSize;
   font-weight: $mainFontWeight;
+  color: $main-color;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -45,7 +32,7 @@ h6 {
   margin: 0;
 }
 
-a {
+a.menu__link {
   text-decoration: none;
   color: $link-color;
 }
@@ -61,39 +48,27 @@ section,
 .section {
   position: relative;
   padding: 40px 0;
-  @media screen and (max-width: $desktopWidth) {
-    padding: 36px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 28px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 20px 0;
-  }
 }
 
 .button {
   display: inline-block;
-  width: 87px;
-  height: 34px;
-  padding-top: 2px;
+  padding: 8px 20px;
+  font-size: 12px;
   text-align: center;
   border: 2px solid $button-entry-color;
   border-radius: 22px;
   color: $button-entry-color;
   &:hover{
     transition: all .5s;
-    background-color: #7f58d3;
-    border: 2px solid #7f58d3;
-    color: #fff;
+    border: 2px solid $main-color;
+    color:$main-color;
   }
 }
 .button-signUp {
   display: inline-block;
   text-align: center;
-  width: 196px;
-  height: 34px;
-  padding-top: 2px;
+  font-size: 12px;
+  padding: 8px 20px;
   border: 2px solid #bc9cff;
   color: #fff;
   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
@@ -106,22 +81,21 @@ section,
   }
 }
 
+
+
 .container {
   width: 100%;
+  padding: 0 20px;
   flex: 0 0 auto;
   position: relative;
   margin: 0 auto;
   max-width: $desktopWidth;
-  @media screen and (max-width: $smDesktopWidth) {
-    max-width: tableWidth;
-  }
-  @media screen and (max-width: $tableWidth) {
-    max-width: phoneWidth;
-  }
-  @media screen and (max-width: $phoneWidth) {
-    max-width: smPhoneWidth;
+  
+}
+@media screen and (max-height: 700px) {
+  .content-form{
+    
   }
 }
-
 // Modules
 @import "./bundles/bundle.scss";
