--- a/src/blocks/content/calendar/calendar.pug
+++ b/src/blocks/content/calendar/calendar.pug
@@ -12,9 +12,10 @@ div(class="calendar disable-selection" id="calendar")
         ul.calendar-week
     .calendar-day-list
         ul.calendar-days
-    .calendar-buttons
-        a(href="#" id="form-data-clear") очистить
-        a(href="#" id="form-data-apply") применить
+    .calendar-buttons-wraper
+        .form-buttons
+            a(href="#" class="form-data-buttons" id="form-calendar-data-clear") очистить
+            a(href="#" class="form-data-buttons" id="form-calendar-data-apply") применить
 
 
 
