--- a/src/blocks/content/calendar/calendar.scss
+++ b/src/blocks/content/calendar/calendar.scss
@@ -1,16 +1,4 @@
 
-  .text-center {
-    text-align: center;
-  }
-  
-  .text-right {
-    text-align: right;
-  }
-  
-  .text-muted {
-    color: #777;
-  }
-  
   .cursor-pointer {
     cursor: pointer;
   }
@@ -166,18 +154,9 @@
   .calendar-day-list{
     margin-bottom: 20px;
   }
-  
-  .calendar-buttons {
-    display: flex;
-    justify-content: space-between;
-  }
-  .calendar-buttons a {
+  .calendar-buttons-wraper{
     padding: 0 20px;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 15px;
-    text-transform: uppercase;
-    color: #bc9cff;
   }
+  
+  
   
