fixed some problem

--- a/src/bundles/bundle.pug
+++ b/src/bundles/bundle.pug
@@ -1,9 +1,8 @@
 include ../assets/utils_pug/mixins
 
-include ../blocks/Headers&Footers/Headers&Footers
-include ../blocks/cards/cards
-//- block content
-//-     include ../blocks/content/content
-//- include ../blocks/footer/footer
+include ../blocks/header/header
+block content
+    include ../blocks/content/content
+include ../blocks/footer/footer
 
     
